fixed white space

--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,13 @@
   box-sizing: border-box;
 }
 
+html {
+  height: 100%;
+}
+
 body {
   font-family: "Helvetica neue", Helvetica, Arial,"Lucida Grande", sans-serif;
+  background-color: black;
 }
 
 header {
